# ThresholdCrush

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL.md  README.md  RELEASE.md
.github/workflows/: release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ThresholdCrushDSP.h
Tests/: ThresholdCrushDSPTests.cpp  ThresholdCrushLayoutTests.cpp
scripts/: package_macos.sh  package_macos_vst3.sh
